@startuml users

' Comment: В модуле не используется работа с доменными событиями. Интеграционные события по необходимости будут опубликованы в Application слое

' Base
    abstract class Entity

' Users
    class User extends Entity {
        +Roles: HashSet<Role>
        -User()
        +{static}ErrorOr<User> Create(Guid id, ICollection<Role> roles)
        +ErrorOr<Success> AddRole(Role role)
        +ErrorOr<Success> RemoveRole(Role role)
    }

    static class UserMessages
    static class UserConstraints
    static class UserErrors

    class Role {
        +Code: int
        +Name: string
        +{static} User: Role 
        +{static} Moderator: Role 
        -{static} All: IReadOnlyCollection<Role> 
        +{static} Role FromName(string name)
        -Role()
    }

    User ..> UserMessages
    User ..> UserConstraints
    User ..> UserErrors
    User o-- Role

@enduml